--- a/README
+++ b/README
@@ -6,8 +6,8 @@ in that SoC.
 
 Usage
 =====
-The application is intended to be loaded into from the FEL mode with the 'fel'
-application available in https://github.com/linux-sunxi/sunxi-tools.
+The application is intended to be loaded into SRAM from the FEL mode with the
+'fel' tool available from https://github.com/linux-sunxi/sunxi-tools.
 
 Embedded in the OpenRISC 1000 binary is a small ARM "boot loader",
 which is intended to be run first, it's sole purpose is to deassert the
@@ -16,7 +16,7 @@ reset line to the AR100 core.
 To build the ARM "boot loader":
 $ make -C ar100-boot/
 
-To build and load the OpenRISC baremetal application:
+To build, load and run the OpenRISC baremetal application:
 $ make load
 
 A note about the SRAM and exception vectors
